# auction

./: .flake8  .gitignore  Dockerfile  deploy.tf  docker-compose.yml  heroku.yml  local.tf  manage.py  pyproject.toml
.github/workflows/: main.yml  push.yml
application/: Dockerfile  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  pytest.ini
application/auction/: celery.py  development_settings.py  production_settings.py  settings.py  urls.py  wsgi.py
application/auctions/: emails.py  models.py  routing.py  utils.py  views.py
application/auctions/migrations/: 0001_initial.py  0002_auto_20210927_0915.py  0005_auto_20210929_0925.py  0006_auto_20210930_0931.py  0007_auto_20210930_1231.py  0008_auto_20211001_0924.py
application/items/: admin.py
application/lots/: pagination.py  serializers.py  urls.py  views.py
application/lots/migrations/: 0002_auto_20210929_0756.py  0003_lot_unique_id.py
application/users/: serializers.py  urls.py  views.py
auction/: asgi.py  celery.py  development_settings.py  production_settings.py  settings.py  urls.py  wsgi.py
auctions/: admin.py  consumers.py  emails.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
auctions/migrations/: 0003_auto_20210927_1250.py  0004_auto_20210929_0756.py  0009_auto_20211006_0834.py  0010_auto_20211006_0907.py  0011_auto_20211007_1233.py
auctions/templates/test/: index.html
auctions/tests/: test_views.py
items/: models.py  serializers.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_auto_20210927_0758.py
lots/: models.py  serializers.py  urls.py  views.py
lots/migrations/: 0001_initial.py  0004_auto_20210930_0935.py
terraform/: deploy.tf
users/: authentication.py  models.py  urls.py  views.py
