[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["Dmitry Bakunovich <dv.bakunovich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1"
psycopg2 = "^2.9.1"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
